--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,15 @@
   <meta name="description" content="" />
   <meta name="author" content="@Issaafalkattan" />
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9FHESNQYB0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9FHESNQYB0');
+</script>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
   <div id="root"></div>
