--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <head>
   <meta charset="utf-8" />
+  <meta name="google-adsense-account" content="ca-pub-1875334922020199">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="shortcut icon" href="img/logo.png" type="image/x-icon" />
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
@@ -9,7 +10,9 @@
     href="img/apple-touch-icon-72x72.png"
   />
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap" rel="stylesheet">
   <link
     rel="apple-touch-icon"
     sizes="114x114"
