google console tag adding

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     sizes="72x72"
     href="img/apple-touch-icon-72x72.png"
   />
+  <meta name="google-site-verification" content="6MxsA0PbuznnRpM90jUnJIerU_3NFDE7z8HrhNMDpR0" />
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
