--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,17 @@
     rel="apple-touch-icon"
     sizes="72x72"
     href="img/apple-touch-icon-72x72.png"
-  />
+  /><script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Pioxno",
+      "url": "https://www.pioxno.com",
+      "logo": "https://www.pioxno.com/logo.png",
+      "description": "Pioxno is a leading foodtech startup offering innovative food solutions and a diverse range of brands."
+    }
+    </script>
+    
   <meta name="google-site-verification" content="6MxsA0PbuznnRpM90jUnJIerU_3NFDE7z8HrhNMDpR0" />
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
