--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="shortcut icon" href="img/logo.png" type="image/x-icon" />
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
+  <!-- Primary Meta Tags -->
+<meta name="description" content="Pioxno is a premier foodtech startup offering a diverse range of cuisines including Italian, Indian, and high-protein meals. Order on Zomato and Swiggy, and join our rewards program to earn exclusive perks.">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://www.pioxno.com/">
+<meta property="og:title" content="Pioxno: Multi-Brand Food Delivery | Italian, Indian, High-Protein Meals">
+<meta property="og:description" content="Experience the best in food delivery with Pioxno. Enjoy a wide selection of Italian, Indian, and high-protein meals. Order now on Zomato and Swiggy, and join our rewards program for exclusive benefits.">
+<meta property="og:image" content="https://www.pioxno.com/images/og-image.jpg">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://www.pioxno.com/">
+<meta property="twitter:title" content="Pioxno: Multi-Brand Food Delivery | Italian, Indian, High-Protein Meals">
+<meta property="twitter:description" content="Discover Pioxno's diverse range of cuisines, from Italian to Indian and high-protein meals. Order online and join our rewards program for exclusive perks.">
+<meta property="twitter:image" content="https://www.pioxno.com/images/twitter-image.jpg">
+
+<!-- Additional Meta Tags -->
+<meta name="keywords" content="Pioxno, food delivery, multi-brand food company, Italian cuisine, Indian cuisine, high-protein meals, Zomato, Swiggy, food rewards program, online ordering, foodtech startup">
+<meta name="author" content="Pioxno">
+<meta name="robots" content="index, follow">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link
     rel="apple-touch-icon"
     sizes="72x72"
@@ -14,7 +37,6 @@
       "@type": "Organization",
       "name": "Pioxno",
       "url": "https://www.pioxno.com",
-      "logo": "https://www.pioxno.com/logo.png",
       "description": "Pioxno is a leading foodtech startup offering innovative food solutions and a diverse range of brands."
     }
     </script>
