career and some other changes

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,15 @@
   <meta charset="utf-8" />
   <meta name="google-adsense-account" content="ca-pub-1875334922020199">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="shortcut icon" href="img/logo.png" type="image/x-icon" />
-  <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
   <!-- Primary Meta Tags -->
 <meta name="description" content="Pioxno is a premier foodtech startup offering a diverse range of cuisines including Italian, Indian, and high-protein meals. Order on Zomato and Swiggy, and join our rewards program to earn exclusive perks.">
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet">
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://www.pioxno.com/">
